--- a/css/metro2.css
+++ b/css/metro2.css
@@ -80,10 +80,15 @@ nav {
 }
 
 h1{
+    font-family: "Poppins", sans-serif; 
     font-size: xx-large;
 }
 
 p{
+    text-align: left;
+    margin-left: 270px;
+    width: 800px; 
+    font-family: "Poppins", sans-serif; 
     font-size: large;
     font-weight: bold;
 }
@@ -94,12 +99,10 @@ img{
     width: 800px;
 }
 .main-metro1{
-  width: 800px;  
-  display: block;
-  justify-content: left;
-  align-items: left;
-  text-align: left;
- 
+    display: block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 
@@ -266,4 +269,25 @@ footer hr {
     padding-bottom: 1rem;
     text-transform: uppercase;
     font-weight: 600;
+ }
+
+ @media screen and (max-width: 550px){
+    p{
+        margin-left: 0px;
+        width: auto;
+        text-align: left;    
+        font-family: "Poppins", sans-serif; 
+        font-size: large;
+        font-weight: bold;
+    }
+    .main-metro1{
+        display: block;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    .main-metro1 img{
+        width: 100%;
+    }
+    
  }
