--- a/css/politics.css
+++ b/css/politics.css
@@ -1,28 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap");
 * {
-  margin-right: 0;
-  margin-left: 0px;
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
-a {
-  text-decoration: none;
-}
-body {
-  margin: 0;
-}
-
+/* //HEADER SECTION// */
 header {
-  margin-right: 0;
-  margin-left: 0;
   background: linear-gradient(to right, #2bb7da, #31d35c);
+  z-index:1;
+  position:sticky;
+	top:0px;
+	left:0px;
 }
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1.2rem;
+ 
 }
 
 .header-logo h3,
@@ -59,7 +55,6 @@ nav {
 /* hover styles for the nav-link */
 .nav-link {
   position: relative;
-  font-size: 25px;
 }
 .nav-link:before {
   content: "";
@@ -147,7 +142,7 @@ h2 {
   font-size: 14px;
   color: #bcaa9f;
   position: relative;
-  top: 30px;
+  top: 10px;
 }
 
 .title svg {
@@ -159,6 +154,17 @@ h2 {
   margin: 4px;
   border-radius: 8px;
   background-color: beige;
+}
+
+.title svg:hover {
+  width: 50px;
+  height: 60px;
+  border: 1px solid;
+  fill: rgb(113, 175, 156);
+  padding: 4px;
+  margin: 4px;
+  border-radius: 8px;
+  background-color: rgb(163, 103, 34);
 }
 
 .image {
@@ -186,7 +192,7 @@ h2 {
 
 .second-advertisement img {
   width: 95%;
-  height: 200px;
+  height: 100px;
 }
 
 /* .unity-list{
@@ -821,10 +827,10 @@ footer hr {
   }
 
   .share h4 {
-    font-size: 12px;
+    font-size: 9px;
     color: #bcaa9f;
     position: relative;
-    top: 30px;
+    top: 20px;
   }
 
   .image {
@@ -842,7 +848,8 @@ footer hr {
     width: 95%;
   }
   .second-advertisement img {
-    object-fit: contain;
+    width: 95%;
+    height: 50px;
   }
 
   .news-content {
@@ -852,5 +859,169 @@ footer hr {
   .unity-list img {
     width: 80%;
     padding: 20px;
+  }
+}
+
+@media (max-width: 750px) {
+  header {
+    z-index:1;
+position:sticky;
+top:0px;
+left:0px;
+  }
+  .header-logo {
+    margin-left: -1.5rem;
+  }
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    margin-top: 0.4rem;
+    margin-right: 1rem;
+    right: 0;
+  }
+  nav svg {
+    width: 1.3rem;
+    fill: white;
+  }
+  .close,
+  .nav-checkbox {
+    display: none;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.1rem 0;
+  }
+  .nav-links {
+    position: absolute;
+    margin-top: 2.76rem;
+    top: 20px;
+    right: 0;
+    width: 100%;
+    z-index: 100;
+  }
+
+  li {
+    display: none;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.2rem;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu li {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .close {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .menu {
+    display: none;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu {
+    background: linear-gradient(to right, #2bb7da, #31d35c);
+    opacity: 1.5;
+    height: 55vh;
+    padding-top: 2rem;
+    border-radius: 3px;
+  }
+  .nav-call-to-action {
+    display: none;
+  }
+  footer {
+    font-size: 1rem;
+  }
+  .footer-form {
+    margin-top: 0.5rem;
+  }
+  .footer-form a {
+    margin-left: 0.3rem;
+    padding: 0.8rem 0.95rem 0.8rem 0.95rem;
+  }
+  .form-search-wrapper {
+    width: 80%;
+  }
+  .search-button {
+    width: 18%;
+  }
+  .foter-form .search-input {
+    padding: 0.8rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+
+  .footer-middle-section {
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  .footer-section {
+    margin-left: 1rem;
+    width: 32%;
+  }
+  .footer-section:nth-child(3) {
+    margin-top: 0.8rem;
+  }
+
+  .footer-section:last-child {
+    margin-top: 0.8rem;
+  }
+  .footer-section .subscribe-btn {
+    display: inline-block;
+    padding: 0.4rem 2rem 0.4rem 2rem;
+  }
+  .footer-bottom-section {
+    text-align: center;
+  }
+  .footer-bottom-section p {
+    margin-left: 0;
+  }
+  .footer-bottom-section {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer-bottom-link {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1.5rem;
+  }
+  .footer-social-links {
+    width: 55%;
+    margin: 0 auto;
+  }
+  .social-link {
+    display: flex;
+    justify-content: center;
+  }
+  .copyright {
+    font-weight: 700;
+    /* line-height: 1.4; */
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 350px) {
+  /*For very small devices*/
+  .footer-middle-section {
+    justify-content: center;
+  }
+  .footer-section {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-bottom-link {
+    flex-direction: row;
+    width: 70%;
+  }
+  .footer-social-links {
+    width: 90%;
+    margin-top: 1rem;
   }
 }
