--- a/css/subscribe.css
+++ b/css/subscribe.css
@@ -113,10 +113,6 @@ body {
 }
 
 
-main {
-  margin-top:100px;
-}
-
   .container {
     width: 90%;
     max-width: 1100px;
@@ -200,6 +196,7 @@ main {
 .service-section {
     margin: 0 auto;
     width:95%;
+    padding-top:8%;
     
     
 }
@@ -274,13 +271,13 @@ main {
   .section-three {
     background:linear-gradient(to right, #2bb7da, #31d35c);
     color: white;
-    padding-top: 3%;
+    padding-top: 8%;
     padding-bottom: 3%;
   }
 
   .section-three .section-title--dark {
     text-align: center;
-    margin: 1rem auto;
+    margin: 0 auto;
   }
 
   .section-three .container{
@@ -290,7 +287,6 @@ main {
   .subscription-details {
       display:flex;
       gap:5%;
-      
   }
 
   .subscription-details .subscription-text {
@@ -334,9 +330,9 @@ padding:10px;
   .form-heading h5 {
     text-align: center;
     margin-top:5%;
-    margin-bottom:0;
-    color:black;
-    font-weight:300;
+    padding-bottom:5px;
+    color:rgb(46, 83, 46);
+    font-weight:700;
   }
   .contact-form {
     display: flex;
@@ -369,6 +365,8 @@ padding:10px;
   }
   .contact-form-group label {
     font-size: 1.2rem;
+    color:#31d35c;
+    font-weight:400;
 
   }
   .contact-form-group textarea {
@@ -476,6 +474,7 @@ padding:10px;
     margin: 2% 0;
     min-height: 300px;
     width:95%;
+    padding-top:8%;
 }
 
 .SMSS-section  p {
@@ -553,7 +552,7 @@ padding:10px;
 
 .SMSS-svg-card {
     background: linear-gradient(to right, #2bb7da, #31d35c);
-    box-shadow: 0 2px 0 2px  rgba(3, 36, 3, 0.9);
+    box-shadow: 0px 2px 1px 2px  rgba(3, 36, 3, 0.9);
     transition: 0.3s;
     border-radius: 50%;
     padding: 50px;
@@ -564,7 +563,7 @@ padding:10px;
 }
 .SMSS-svg-card:hover {
     background: white;
-    box-shadow: 0 4px 0 4px  rgba(3, 36, 3, 0.9);
+    box-shadow: 1px 4px 6px 6px  rgba(3, 36, 3, 0.9);
 
 }
 
@@ -683,6 +682,18 @@ padding:10px;
     color:white;
 }
 
+.section-five .bottom-top-button {
+  display:flex;
+  justify-content: flex-end;
+  padding-top:0.865%;
+}
+
+.section-five .bottom-top-button svg{
+  width:50px;
+  height:50px;
+  color:#31d35c;
+}
+
   @media (max-width: 720px) {
     .row {
       flex-direction: column;
@@ -690,6 +701,9 @@ padding:10px;
     }
     .col {
       width: 100%;
+    }
+    .intro-section-overlay .intro-container-content {
+      margin-top:30%;
     }
 
     .section-five .address-column-section {
@@ -703,6 +717,7 @@ padding:10px;
     .intro, .section-one, .section-two, .section-three, .SMSS-section {
         margin-bottom:10%;
     }
+   
   }
   
 
