--- a/css/politics.css
+++ b/css/politics.css
@@ -469,15 +469,15 @@ a {
 
 }
 
-  @media (max-width: 500px) {
-    .right {
-      right: 5px;
+@media (max-width: 500px) {
+  .right {
+    right: 5px;
       left: auto;
-    }
+  }
     
-    .left {
+  .left {
       left: 5px;
-    }
+  }
     
     .main-news{
       width: 70%;
@@ -690,7 +690,7 @@ a {
   width: 80%;
   padding: 20px;
 }
-}
+/* } */
 
 
 /* //FOOTER// */
