--- a/css/tidelabNews.css
+++ b/css/tidelabNews.css
@@ -61,6 +61,7 @@ nav {
 
 /* //MAIN SECTION// */
 
+
 .section-heading-separator {
   display:flex;
   justify-content:center;
@@ -68,6 +69,14 @@ nav {
   margin-bottom: 0.2em;
 }
 
+.section-heading-separator fieldset h2{
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  text-align: center;
+  
+}
 .section-heading-separator .sub-title{
   font-size:2.2em;
   font-family:'Times New Roman', Times, serif;
@@ -89,75 +98,43 @@ nav {
   color: red;
 }
 
-main{
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5px;
-}
 .sub-title{
     margin: 20px 20px;
     text-align: center;
     font-size: bold;
 }
 
- .whole-container-wrapper {
-   width: 80%;
-  /* align-items: center; */
-  margin-top: 5px;
-}
-
-.advertisment{
-  width: 20%;
-}
-
-/* /* .ad{
-  width: 100%;
-  height: 550px;
-  margin-bottom: 80px;
-} */
 
 .adname{
  font-size: 10px;
  text-align: center;
-} */
-
-.left-section{
-  width: 30%;
 }
 
 .first{
   border-bottom: 2px solid rgb(226, 217, 217);
 }
 
-  .left img{
-    width: 100%;
-    height: 180px;
-}
 
 .middle-section{
   width: 52%;
-  border-left: 1px solid rgb(226, 217, 217);
-  border-right: 1px solid rgb(226, 217, 217);
+  border-left: 2px solid rgb(226, 217, 217);
+  border-right: 2px solid rgb(226, 217, 217);
   margin-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
+  /* padding-left: 10px;
+  padding-right: 10px; */
 }
 
-.middle img{
-  width: max-content;
-  height: 250px;
-  /* align-items: stretch; */
-}
+ .middle img{
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  object-position: center;
+} 
 
 .middle {
   padding-left: 5px;
-  padding-right: 5px;
-  margin-top: 25px;
-}
-
-.middle a{
-  text-decoration: none;
-  color: #000;
+  padding-right: 5px; 
+  margin-top: 10px;
 }
 
 .middle-title{
@@ -165,20 +142,18 @@ main{
   text-align: center;
 }
 
-.right-section{
-  width: 30%;
-}
-
-.right img{
+.right img, .left img {
   width: 100%;
   height: 180px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .news-headlines{
   display: flex;
   justify-content: space-around;
   gap: 10px;
-  border-bottom: 1px solid rgb(226, 217, 217);
+  border-bottom: 1px solid rgb(226, 217, 217); 
 }
 .container-wrapper{
     display: flex;
@@ -189,52 +164,97 @@ main{
 
 }
 
-
-/* .news-clip{
-    padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0 0 0 0.2);
-    transition: 0.3s;
-    border-radius: 5px; 
-}*/
-
  a {
    text-decoration: none;
    color: black;
  }
 
+ .other-news-container{
+   display: flex;
+   flex-direction: column;
+   gap: 100px;
+ } 
 
-.section-heading-separator fieldset h2{
-    font-size: 30px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    text-transform: uppercase;
-    text-align: center;
-    
-}
-.div-wrapper{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-   gap: 20px;
-  margin-top: 20px;
+ .div-wrapper{
+  width: 22%;
 }
 
 .div-wrapper img {
-  width: 235px;
-    height: 180px;
+  width: 100%;
+  height: 150px;
+  
+} 
+
+.div-wrapper p{
+  width: 90%;
+  margin-left: 5px;
+  margin-top: 2.5px;
+}
+
+.other-news-row {
+ /* width: 100%; */
+ display: flex; 
+ justify-content: center;
+ align-items: center;
+align-content: center;
+ gap: 25px;
 
 }
 
-/* //FOOTER SECTION// */
-footer {
+/* RESPONSIVE SECTION */
+@media (max-width: 750px) {
+
+  .news-headlines{
+    flex-direction: column;
+  }
+  .left-section, .middle-section, .right-section{
+    width: 90%;
+  margin: 0 auto
+}
+  .right img, .left img{
+    width: 100%;
+    height: 450px;
+  }
+  .middle img{
+    height: 450px;
+  }
+  .middle-section{
+  margin: 0px 0px 0px 0px; 
+  border-left: none; 
+  border-right: none;
+  }
+   
+   .middle {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .other-news-container{
+    /* gap: 0; */
+  }
+  .other-news-row{
+    flex-direction: column;
+    /* gap: 0; */
+  }
+  .div-wrapper{
+    width: 100%;
+  }
+}
+  
+/* //FOOTER SECTION// 
+  footer { .middle {
+  padding-left: 5px;
+  padding-right: 5px; 
+  margin-top: 10px;
+}
+
     background-color: #2bb7da;
     margin-top: 2rem;
     padding-top: 1rem;
 }
 .container {
-    width: 95%;
-    max-width: 1100px;
-    margin: 0 auto;
+  width: 95%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
   
 .footer-top {
@@ -356,6 +376,8 @@ footer hr {
     font-weight: 600;
 }
 @media (max-width: 750px) {
+
+
     header {
       position: relative;
     }
@@ -465,5 +487,4 @@ footer hr {
     }
     .mentor-name {
       text-align: center;
-    }
-}
+    }*/
