--- a/homepage_news_extensions/business_news_RSS_FEED.css
+++ b/homepage_news_extensions/business_news_RSS_FEED.css
@@ -91,17 +91,145 @@ nav {
 }
 /* //MAIN SECTION/ */
 
+.row {
+  display: flex;
+  justify-content:center;
+  gap:5%;
+}
+.col {
+  width:50%;
+  /* border:3px solid #31d35c; */
+  border-radius:10px;
+}
 
-iframe {
-    width:100%;
-    height:700px;
+
+
+.section-five {
+  background-size:cover;
+  background-position: 50%;
+  padding:20px;
+}
+
+.contact-us-holder h4 {
+  font-weight:bold;
+  font-size:1.905em;
+  text-align:center;
+  padding-bottom:20px;
+}
+
+.address-column-section h4 {
+  padding-bottom:20px;
+  font-size:1.565em;
+  text-align:center;
+  color:rgb(107, 94, 94)
+}
+
+.address-column-section p {
+  padding-bottom:15px;
+  line-height:1.2em;
+  font-size:1.265em;
+  text-align:center;
+  color:rgb(107, 94, 94)
+}
+.address-column-section p:last-child {
+  border-bottom: 2px solid rgb(134, 121, 121);
 }
 
 
 
 
+.video-content-title {
+  text-align:center;
+  padding-top:1%;
+}
+
+.video-content-container {
+  display:flex; 
+  justify-content: center;
+  gap:2%;
+ /* border:2px solid black; */
+  
+  max-height:fit-content;
+  padding-top:1%;
+  
+}
+
+.video-content-container .video-content-card:hover {
+    box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.9);
+    transition: 0.5s;
+    scale: 1.5;
+}
+
+.video-content-card {
+  padding:0px;
+  flex-basis:10%;
+  flex-grow: 1;
+  flex-shrink:0;
+  justify-content: center;
+}
+
+.video-content-card img {
+  width:90%;
+  height:90%;
+  padding-bottom:20px;
+  border-bottom: 2px solid rgb(134, 121, 121);
+}
 
 
+.video-content-card a iframe {
+    width:100%;
+    height:100%;
+  }
+
+
+  .video-content-container iframe:hover {
+    box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.9);
+    transition: 0.5s;
+    scale: 1.5;
+}
+
+/*
+
+.first-video-content-card, .second-video-content-card, .third-video-content-card, .fourth-video-content-card, .fifth-video-content-card {
+    padding:5px;
+    flex-basis:10%;
+    flex-grow: 1;
+    flex-shrink:0;
+  } */
+
+  /*this is for the videos in the other news section*/
+/*
+  .video-content-card-holder{
+    padding:5px;
+    flex-basis:10%;
+    flex-grow: 1;
+    flex-shrink:0;
+  } */
+
+
+
+.section-five .bottom-top-button {
+display:flex;
+justify-content: flex-end;
+padding-top:0.865%;
+}
+
+.section-five .bottom-top-button svg{
+width:50px;
+height:50px;
+color:#31d35c;
+}
+
+@media (max-width: 720px) {
+  .row {
+    flex-direction: column;
+    text-align: center;
+  }
+  .col {
+    width: 100%;
+  }
+
+}
 
 
 
